--- a/app/src/main/res/layout/item_story_header.xml
+++ b/app/src/main/res/layout/item_story_header.xml
@@ -11,7 +11,7 @@
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_datetime"
@@ -19,8 +19,9 @@
             android:layout_height="wrap_content"
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
+            android:textStyle="bold"
             android:paddingTop="12dp"
-            android:textColor="@color/white"
+            android:textColor="@color/gray_dark"
             android:textSize="@dimen/font_size_small"
             app:datetime="@{section.datetime}"
             tools:text="2015-6-25" />
